--- a/arch/arm/configs/rbctrl_dev_defconfig
+++ b/arch/arm/configs/rbctrl_dev_defconfig
@@ -927,6 +927,7 @@ CONFIG_SCSI_MOD=y
 # CONFIG_ATA is not set
 # CONFIG_MD is not set
 CONFIG_NETDEVICES=y
+CONFIG_MII=m
 CONFIG_NET_CORE=y
 # CONFIG_BONDING is not set
 # CONFIG_DUMMY is not set
@@ -974,7 +975,11 @@ CONFIG_NET_VENDOR_MICROCHIP=y
 # CONFIG_ETHOC is not set
 # CONFIG_SH_ETH is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
-# CONFIG_NET_VENDOR_SMSC is not set
+CONFIG_NET_VENDOR_SMSC=y
+# CONFIG_SMC91X is not set
+# CONFIG_SMC911X is not set
+CONFIG_SMSC911X=m
+# CONFIG_SMSC911X_ARCH_HOOKS is not set
 # CONFIG_NET_VENDOR_STMICRO is not set
 CONFIG_NET_VENDOR_VIA=y
 # CONFIG_VIA_VELOCITY is not set
