rbctrl: enable mtd-ram,weim

--- a/arch/arm/configs/rbctrl_dev_defconfig
+++ b/arch/arm/configs/rbctrl_dev_defconfig
@@ -735,7 +735,7 @@ CONFIG_REGMAP_MMIO=y
 #
 # Bus devices
 #
-# CONFIG_IMX_WEIM is not set
+CONFIG_IMX_WEIM=y
 # CONFIG_ARM_CCI is not set
 # CONFIG_CONNECTOR is not set
 CONFIG_MTD=y
@@ -775,14 +775,16 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_CFI_I4 is not set
 # CONFIG_MTD_CFI_I8 is not set
 CONFIG_MTD_RAM=y
-# CONFIG_MTD_ROM is not set
+CONFIG_MTD_ROM=y
 # CONFIG_MTD_ABSENT is not set
 
 #
 # Mapping drivers for chip access
 #
 # CONFIG_MTD_COMPLEX_MAPPINGS is not set
-CONFIG_MTD_PLATRAM=y
+# CONFIG_MTD_PHYSMAP is not set
+CONFIG_MTD_PHYSMAP_OF=y
+# CONFIG_MTD_PLATRAM is not set
 
 #
 # Self-contained MTD device drivers
@@ -1405,7 +1407,7 @@ CONFIG_REGULATOR_ANATOP=y
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_FB=y
-# CONFIG_FB_CMD_SPLASH is not set
+CONFIG_FB_CMD_SPLASH=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
@@ -1441,20 +1443,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_MXS is not set
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_EXYNOS_VIDEO is not set
-CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=y
-CONFIG_LCD_PLATFORM=y
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
-CONFIG_BACKLIGHT_GENERIC=y
-CONFIG_BACKLIGHT_PWM=y
-# CONFIG_BACKLIGHT_ADP8860 is not set
-# CONFIG_BACKLIGHT_ADP8870 is not set
-# CONFIG_BACKLIGHT_LM3630A is not set
-# CONFIG_BACKLIGHT_LM3639 is not set
-# CONFIG_BACKLIGHT_LP855X is not set
-# CONFIG_BACKLIGHT_GPIO is not set
-# CONFIG_BACKLIGHT_LV5207LP is not set
-# CONFIG_BACKLIGHT_BD6107 is not set
+# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 CONFIG_FB_MXC=y
 CONFIG_FB_MXC_SYNC_PANEL=y
 CONFIG_FB_MXC_LDB=y
@@ -1557,9 +1546,9 @@ CONFIG_USB_HID=m
 # CONFIG_I2C_HID is not set
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
-CONFIG_USB_COMMON=m
+CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
-CONFIG_USB=m
+CONFIG_USB=y
 # CONFIG_USB_DEBUG is not set
 # CONFIG_USB_ANNOUNCE_NEW_DEVICES is not set
 
@@ -1580,8 +1569,8 @@ CONFIG_USB_DEFAULT_PERSIST=y
 #
 # CONFIG_USB_C67X00_HCD is not set
 # CONFIG_USB_XHCI_HCD is not set
-CONFIG_USB_EHCI_HCD=m
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 # CONFIG_USB_EHCI_MXC is not set
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
@@ -1657,14 +1646,14 @@ CONFIG_USB_EHCI_TT_NEWSCHED=y
 #
 # USB Physical Layer drivers
 #
-# CONFIG_USB_PHY is not set
+CONFIG_USB_PHY=y
 # CONFIG_NOP_USB_XCEIV is not set
 # CONFIG_AM335X_PHY_USB is not set
 # CONFIG_SAMSUNG_USB2PHY is not set
 # CONFIG_SAMSUNG_USB3PHY is not set
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
-# CONFIG_USB_MXS_PHY is not set
+CONFIG_USB_MXS_PHY=y
 # CONFIG_USB_RCAR_PHY is not set
 # CONFIG_USB_ULPI is not set
 # CONFIG_USB_GADGET is not set
@@ -2328,6 +2317,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_LZO=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_ASSOCIATIVE_ARRAY=y
