kernel boot arg use disk signature to identify root partition

--- a/arch/arm/boot/dts/imx6qdl-wisehmi-dev.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi-dev.dtsi
@@ -6,7 +6,7 @@
 	};
 
 	chosen {
-		bootargs = "root=/dev/mmcblk1p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280 initroot=10:none,initramfs,/startup/run quiet";
+		bootargs = "root=PARTUUID=12345678-02 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280 initroot=10:none,initramfs,/startup/run quiet";
 	};
 
 	aliases {
