wisehmi contiguous memory config min(320MB, total*30%)

--- a/arch/arm/configs/wisehmi_dev_defconfig
+++ b/arch/arm/configs/wisehmi_dev_defconfig
@@ -151,7 +151,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_SUPPORT_INITROOT=y
-# CONFIG_UBOOT_SMP_BOOT is not set
+CONFIG_UBOOT_SMP_BOOT=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
@@ -698,9 +698,10 @@ CONFIG_CMA=y
 # Default contiguous memory area size:
 #
 CONFIG_CMA_SIZE_MBYTES=320
-CONFIG_CMA_SIZE_SEL_MBYTES=y
+CONFIG_CMA_SIZE_PERCENTAGE=30
+# CONFIG_CMA_SIZE_SEL_MBYTES is not set
 # CONFIG_CMA_SIZE_SEL_PERCENTAGE is not set
-# CONFIG_CMA_SIZE_SEL_MIN is not set
+CONFIG_CMA_SIZE_SEL_MIN=y
 # CONFIG_CMA_SIZE_SEL_MAX is not set
 CONFIG_CMA_ALIGNMENT=8
 CONFIG_CMA_AREAS=7
