added auo lcd-1920x720 panel,and imx6dl-wisehmi-carnation.dts

--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -89,6 +89,17 @@
 			hsync-len = <70>;
 			vsync-len = <25>;
 		};
+		AUO_C123HAN01_1 { /*auo panel*/
+			clock-frequency = <95000000>;
+			hactive = <1920>;
+			vactive = <720>;
+			hback-porch = <50>;
+			hfront-porch = <50>;
+			vback-porch = <15>;
+			vfront-porch = <15>;
+			hsync-len = <60>;
+			vsync-len = <10>;
+		};
 	};
 };
 
