enable uart3 for bluetooth module

--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1616,6 +1616,14 @@
 				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b1
 			>;
 		};
+		pinctrl_uart3_3: uart3grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D24__UART3_RX_DATA   0x1b0b1
+				MX6QDL_PAD_EIM_D25__UART3_TX_DATA   0x1b0b1
+				// bt_wake
+				MX6QDL_PAD_GPIO_5__GPIO1_IO05       0x80000000
+			>;
+		};
 	};
 
 	uart4 {
