--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -10,10 +10,10 @@ config VIDEO_MXC_IPU_CAMERA
 	default y
 
 config MXC_CAMERA_OV5640
-        tristate "OmniVision ov5640 camera support"
-        depends on !VIDEO_MXC_EMMA_CAMERA && I2C
-        ---help---
-          If you plan to use the ov5640 Camera with your MXC system, say Y here.
+	tristate "OmniVision ov5640 camera support"
+	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
+	---help---
+	  If you plan to use the ov5640 Camera with your MXC system, say Y here.
 
 config MXC_CAMERA_OV5642
 	tristate "OmniVision ov5642 camera support"
@@ -32,6 +32,12 @@ config MXC_TVIN_ADV7180
 	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
 	---help---
 	  If you plan to use the adv7180 video decoder with your MXC system, say Y here.
+
+config MXC_TVIN_TW9990
+	tristate "Intersil TW9990 TV Decoder Input support"
+	depends on !VIDEO_MXC_EMMA_CAMERA && I2C
+	---help---
+	  If you plan to use the tw9990 video decoder with your MXC system, say Y here.
 
 choice
 	prompt "Select Overlay Rounting"
