changed lcd to ldb and deleted audio relevant configs for project todi

--- a/arch/arm/boot/dts/imx6dl-wisehmi-todi.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi-todi.dts
@@ -9,35 +9,23 @@
 };
 
 &mxcfb1 {
-	disp_dev = "lcd";
-	mode_str = "LQ101K5DZ01";
-	interface_pix_fmt = "BGR24";
+	disp_dev = "ldb";
+	mode_str = "CHUNGHWA_CLAA088WA01XN";
+	interface_pix_fmt = "RGB24";
 };
 
 &ldb {
-	status = "disabled";
+	status = "okay";
 };
 
 &lcd {
-	status = "okay";
-};
-
-&uart3 {
-	status = "okay";
+	status = "disabled";
 };
 
 &usbotg {
 	status = "okay";
 };
 
-&ssi1 {
-	status = "okay";
-};
-
-&audmux {
-	status = "okay";
-};
-
-&i2c3 {
+&uart3 {
 	status = "okay";
 };
