--- a/arch/arm/boot/dts/imx6dl-rbctrl.dts
+++ b/arch/arm/boot/dts/imx6dl-rbctrl.dts
@@ -195,8 +195,8 @@
 				MX6QDL_PAD_GPIO_8__GPIO1_IO08	0x80000000	//fpga interrupt
 				MX6QDL_PAD_DISP0_DAT0__GPIO4_IO21	0x80000000	//Exboard interrrupt LAN9221_0
 				MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x80000000	//Exboard interrrupt LAN9221_1
-				MX6QDL_PAD_DISP0_DAT2__GPIO4_IO23	0x80000000	//Exboard interrrupt MechaTL2
-				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	0x80000000	//Exboard interrrupt MechaTL3
+				MX6QDL_PAD_DISP0_DAT2__GPIO4_IO23	0x80000000	//Exboard interrrupt JL098
+				MX6QDL_PAD_DISP0_DAT3__GPIO4_IO24	0x80000000	//Exboard interrrupt JL101
 			>;
 		};
 	};
@@ -273,7 +273,7 @@
 			fsl,pins = <
 				MX6QDL_PAD_EIM_OE__EIM_OE_B		0xb0b1
 				MX6QDL_PAD_EIM_RW__EIM_RW		0xb0b1
-				MX6QDL_PAD_EIM_WAIT__EIM_WAIT_B	0xb060
+				MX6QDL_PAD_EIM_WAIT__EIM_DTACK_B	0xb060
 				MX6QDL_PAD_EIM_EB0__EIM_EB0_B	0x80000000
 				MX6QDL_PAD_EIM_EB1__EIM_EB1_B	0x80000000
 				MX6QDL_PAD_EIM_LBA__EIM_LBA_B	0x80000000
@@ -324,7 +324,7 @@
 	#size-cells = <1>;
 	ranges = <0 0 0x08000000 0x02000000		//cs0, fpga
 			1 0 0x0A000000 0x02000000	//cs1, fram
-			2 0 0x0C000000 0x02000000	//cs2, unused
+			2 0 0x0C000000 0x02000000	//cs2, net board
 			3 0 0x0E000000 0x02000000>;	//cs3, unused
 
 	/*<offset data offset data>...*/
@@ -422,9 +422,13 @@
 		fsl,weim-cs-timing = <0x00610089 0x00000001 0x1c170020
 				0x00000000 0x1c3ca3ca 0x00000000>;
 		};
-	mechatl3@2,3 {
-		compatible = "mtd-ram";
+	jl101@2,3 {
+		compatible = "yaskawa,jl101";
 		reg = <2 0x60000 0x20000>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <24 0x8>;
+		reg-io-width = <2>;
+
 		#address-cells = <1>;
 		#size-cells = <1>;
 		bank-width = <2>;
