--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -34,6 +34,8 @@ obj-$(CONFIG_ISL29003)		+= isl29003.o
 obj-$(CONFIG_ISL29020)		+= isl29020.o
 obj-$(CONFIG_SENSORS_TSL2550)	+= tsl2550.o
 obj-$(CONFIG_RBT_FPGA)		+= rbt_fpga.o
+obj-$(CONFIG_JL098)		+= jl098.o
+obj-$(CONFIG_JL101)		+= jl101.o
 obj-$(CONFIG_EP93XX_PWM)	+= ep93xx_pwm.o
 obj-$(CONFIG_DS1682)		+= ds1682.o
 obj-$(CONFIG_TI_DAC7512)	+= ti_dac7512.o
