--- a/arch/arm/boot/dts/imx6dl-wisehmi-molihua.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi-molihua.dts
@@ -10,7 +10,6 @@
 
 &mxcfb1 {
 	disp_dev = "lcd";
-	mode_str = "LQ101K5DZ01";
 	interface_pix_fmt = "BGR24";
 };
 
@@ -20,6 +19,7 @@
 
 &lcd {
 	status = "okay";
+	native-mode = <&LQ101K5DZ01>;
 };
 
 
