--- a/arch/arm/boot/dts/imx6dl-wisehmi-hall.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi-hall.dts
@@ -2,7 +2,6 @@
 
 &mxcfb1 {
 	disp_dev = "lcd";
-	mode_str = "LQ101K5DZ01";
 	interface_pix_fmt = "BGR24";
 };
 
@@ -12,4 +11,5 @@
 
 &lcd {
 	status = "okay";
+	native-mode = <&LQ101K5DZ01>;
 };
