--- a/arch/arm/boot/dts/imx6dl-wisehmi-tiger.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi-tiger.dts
@@ -10,7 +10,6 @@
 
 &mxcfb1 {
 	disp_dev = "lcd";
-	mode_str = "HSD070IDW1-G";
 	interface_pix_fmt = "BGR24";
 };
 
@@ -20,6 +19,7 @@
 
 &lcd {
 	status = "okay";
+	native-mode = <&HSD070IDW1>;
 };
 
 &i2c3 {
