--- a/arch/arm/boot/dts/imx6dl-wisehmi-tiger.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi-tiger.dts
@@ -2,7 +2,7 @@
 
 &mxcfb1 {
 	disp_dev = "lcd";
-	mode_str = "LQ101K5DZ01";
+	mode_str = "HSD070IDW1-G";
 	interface_pix_fmt = "BGR24";
 };
 
@@ -24,4 +24,8 @@
 
 &i2c3 {
     status = "okay";
+};
+
+&video0 {
+	status = "okay";
 };
