--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1471,6 +1471,7 @@
 
 		pinctrl_ipu1_2: ipu1grp-2 { /* parallel camera */
 			fsl,pins = <
+				/*
 				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12    0x80000000
 				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13    0x80000000
 				MX6QDL_PAD_CSI0_DAT14__IPU1_CSI0_DATA14    0x80000000
@@ -1483,6 +1484,28 @@
 				MX6QDL_PAD_CSI0_PIXCLK__IPU1_CSI0_PIXCLK   0x80000000
 				MX6QDL_PAD_CSI0_MCLK__IPU1_CSI0_HSYNC      0x80000000
 				MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC     0x80000000
+				*/
+
+				MX6QDL_PAD_EIM_A17__IPU1_CSI1_DATA12    0x80000000
+				MX6QDL_PAD_EIM_A18__IPU1_CSI1_DATA13	0x80000000 
+				MX6QDL_PAD_EIM_A19__IPU1_CSI1_DATA14	0x80000000 
+				MX6QDL_PAD_EIM_A20__IPU1_CSI1_DATA15	0x80000000 
+				MX6QDL_PAD_EIM_A21__IPU1_CSI1_DATA16	0x80000000 
+				MX6QDL_PAD_EIM_A22__IPU1_CSI1_DATA17	0x80000000 
+				MX6QDL_PAD_EIM_A23__IPU1_CSI1_DATA18	0x80000000 
+				MX6QDL_PAD_EIM_A24__IPU1_CSI1_DATA19	0x80000000 
+				MX6QDL_PAD_EIM_A16__IPU1_CSI1_PIXCLK	0x80000000 
+				MX6QDL_PAD_EIM_DA11__IPU1_CSI1_HSYNC	0x80000000 
+				MX6QDL_PAD_EIM_DA12__IPU1_CSI1_VSYNC	0x80000000
+				
+				/* PDN */
+				MX6QDL_PAD_SD1_CMD__GPIO1_IO18          0x80000000
+				/* RSTB */
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07           0x80000000
+				/* INTREQ */
+				MX6QDL_PAD_SD1_DAT3__GPIO1_IO21         0x80000000
+				/* MPOUT */
+				MX6QDL_PAD_SD1_DAT2__GPIO1_IO19         0x80000000
 			>;
 		};
 
