set flexcan1,2 disabled by default

--- a/arch/arm/boot/dts/imx6q-wisehmi.dts
+++ b/arch/arm/boot/dts/imx6q-wisehmi.dts
@@ -68,11 +68,11 @@
 };
 
 &flexcan1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &flexcan2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &usbh1 {
