--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -181,6 +181,17 @@
             hsync-len = <162>;
             vsync-len = <7>;
          };
+        SHD123IPW1A00 { /*HannStar 1920*720 panel*/
+            clock-frequency = <51200000>;
+            hactive = <1024>;
+            vactive = <600>;
+            hback-porch = <100>;
+            hfront-porch = <100>;
+            vback-porch = <10>;
+            vfront-porch = <10>;
+            hsync-len = <110>;
+            vsync-len = <11>;
+         };
 	};
 };
 
