--- a/arch/arm/boot/dts/imx6q-wisehmi.dts
+++ b/arch/arm/boot/dts/imx6q-wisehmi.dts
@@ -25,6 +25,7 @@
 
 	aliases {
 		mxcfb0 = &mxcfb1;
+		mxcfb1 = &mxcfb2;
 	};
 
 	mxcfb1: fb@0 {
@@ -37,6 +38,16 @@
 		late_init = <0>;
 		status = "okay";
 	};
+	mxcfb2: fb@1 {
+        compatible = "fsl,mxc_sdc_fb";
+        disp_dev = "lcd";
+        interface_pix_fmt = "BGR24";
+        mode_str ="TFT9K2353";
+        default_bpp = <32>;
+        int_clk = <0>;
+        late_init = <0>;
+        status = "disable";
+    };
 };
 
 &fec {
